force-app/main/default/objects/OperatingHours/OperatingHours.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>