force-app/main/default/objects/OperatingHours/fields/Operating_Hours_Type__c.field-meta.xml
<CustomField>
    <fullName>Operating_Hours_Type__c</fullName>
    <label>Operating Hours Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Operating Hours</fullName>
            </value>
            <value>
                <fullName>Employee Operating Hours</fullName>
            </value>
            <value>
                <fullName>Territory Operating Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>