force-app/main/default/objects/OperatingHours/fields/Salesforce_ID_Casesafe__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID_Casesafe__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Salesforce ID (Casesafe)</label>
    <type>Text</type>
</CustomField>