force-app/main/default/objects/OperatingHours/fields/UseAsReportFilter__c.field-meta.xml
<CustomField>
    <fullName>UseAsReportFilter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UseAsReportFilter</label>
    <type>Checkbox</type>
</CustomField>