force-app/main/default/objects/OperatingHours/listViews/All_OperatingHours.listView-meta.xml
<ListView>
    <fullName>All_OperatingHours</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name</field>
        <operation>startsWith</operation>
        <value>z_edt</value>
    </filters>
    <label>All Operating Hours</label>
</ListView>