force-app/main/default/objects/OperatingHours/listViews/Standard_Operating_Hours.listView-meta.xml
<ListView>
    <fullName>Standard_Operating_Hours</fullName>
    <columns>Name</columns>
    <columns>LastModifiedDate</columns>
    <columns>LastModifiedBy</columns>
    <columns>Id</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name</field>
        <operation>startsWith</operation>
        <value>SSS</value>
    </filters>
    <label>Standard Operating Hours</label>
</ListView>