force-app/main/default/objects/OperatingHours/listViews/TBD_Operating_Hours.listView-meta.xml
<ListView>
    <fullName>TBD_Operating_Hours</fullName>
    <columns>Name</columns>
    <columns>TimeZone</columns>
    <columns>Id</columns>
    <columns>Description</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Name</field>
        <operation>startsWith</operation>
        <value>TBD</value>
    </filters>
    <label>TBD Operating Hours</label>
</ListView>